Update manifest and favicons to use user provided icon

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <meta name="Description" content="Log in to your online account with Tampa Electric and Peoples Gas where you can view and pay your bill, manage your account, update your contact information and more.">
 
     
-    <link rel="apple-touch-icon" href="images/favicons/apple-touch-icon.png?v=oLa4mmb0EO">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png?v=oLa4mmb0EO">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png?v=oLa4mmb0EO">
-    <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg?v=oLa4mmb0EO" color="#205699">
-    <link rel="shortcut icon" href="images/favicons/favicon.ico?v=oLa4mmb0EO">
+    <link rel="apple-touch-icon" href="images/icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/icon.png">
+    <link rel="shortcut icon" href="images/icon.png">
     <meta name="msapplication-config" content="browserconfig.xml?v=oLa4mmb0EO">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="manifest.webmanifest">
