--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@
     <script>
         if ("serviceWorker" in navigator) {
             window.addEventListener("load", function () {
-                navigator.serviceWorker.register("/sw.js");
+                navigator.serviceWorker.register("./sw.js");
             });
         }
     </script>
